--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             </div>
         </div>
             
-        <script type="module" src="./weflow-podcast/index.js">
+        <script type="module" src="./index.js">
             
         </script>
 
